--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'FontAwesome';
-  font-weight: bolder;
+  font-weight: bold;
   src: url('fonts/OpenSans-ExtraBold.ttf');
   src: url('fonts/OpenSans-ExtraBold.ttf') format('truetype');
 }
