--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,14 +1,22 @@
 @font-face {
   font-family: 'FontAwesome';
-  font-weight: bold;
+  font-weight: bolder;
   src: url('fonts/OpenSans-ExtraBold.ttf');
   src: url('fonts/OpenSans-ExtraBold.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url('fonts/OpenSans-Light.ttf');
-  src: url('fonts/OpenSans-Light.ttf') format('truetype');
+  font-weight: bold;
+  src: url('fonts/OpenSans-Bold.ttf');
+  src: url('fonts/OpenSans-Bold.ttf') format('truetype');
+}
+
+
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('fonts/OpenSans-Regular.ttf');
+  src: url('fonts/OpenSans-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
